2010-04-14  Werner Koch  <wk@g10code.com>

	* Makefile.am (install-exec-hook): Rename libgpgcedev-0.dll.

2010-04-14  Marcus Brinkmann  <marcus@g10code.de>

	* Makefile.am (EXTRA_DIST): Add gpgcedev.def.

2010-04-13  Werner Koch  <wk@g10code.com>

	* gpgcedev.c (get_new_opnctx): Always clear IS_WRITE.

2010-04-08  Werner Koch  <wk@g10code.com>

	* gpgcedev.c (GPG_Read, GPG_Write): If the context is not
	associated return ERROR_PIPE_NOT_CONNECTED.
	* system-w32ce.c (__assuan_read, __assuan_write): Return EAGAIN for
	ERROR_PIPE_NOT_CONNECTED.

	* assuan-pipe-connect.c (pipe_connect): Use
	_assuan_close_inheritable also in the spawn error case.

2010-04-06  Werner Koch  <wk@g10code.com>

	* posix-includes.inc.h, w32-includes.inc.h: New.
	* posix-types.inc.h, w32-types.inc.h: New.
	* posix-fd-t.inc.h, w32-fd-t.inc.h, w32ce-fd-t.inc.h: New.
	* posix-sock-nonce.inc.h, w32-sock-nonce.inc.h: New.
	* mkheader.c (write_special): Support them.
	* Makefile.am (common_sources, assuan.h): Ditto
	(parts_of_assuan_h): New.

	* w32-sys-pth-impl.h: Use gpg_err_set_errno.

	* assuan.h.in (_ASSUAN_SYSTEM_PTH_IMPL): Factor code out to ..
	* posix-sys-pth-impl.h, w32-sys-pth-impl.h: New
	* mkheader.c (write_special): Support them.
	* Makefile.am (common_sources, assuan.h): Ditto

2010-03-23  Werner Koch  <wk@g10code.com>

	* assuan-error.c (_assuan_w32_strerror) [W32CE]: Print only the code.

2010-03-22  Werner Koch  <wk@g10code.com>

	* Makefile.am (mkheader, assuan.h): Build header file.
	(nodist_libassuan_la_SOURCES): New.  Use it for assuan.h.
	* mkheader.c: New.
	* assuan.h: Rename to assuan.h.in.

2010-03-18  Werner Koch  <wk@g10code.com>

	* libassuan.def (_assuan_w32ce_prepare_pipe)
	(_assuan_w32ce_finish_pipe): New
	* gpgcedev.c (struct opnctx_s): Replace HD by RVID.
	(GPGCEDEV_IOCTL_SET_HANDLE): Remove.
	(GPGCEDEV_IOCTL_GET_RVID): New.
	(create_rendezvous_id): New.
	(get_new_opnctx): Init the RVID.
	(set_handle): Remove.