@@ -1,3 +1,8 @@
+2010-04-16  Marcus Brinkmann  <marcus@g10code.de>
+
+	* assuan-uds.c (uds_reader, uds_sendfd): Don't break strict
+	aliasing rules.
+
 2010-04-14  Werner Koch  <wk@g10code.com>
 
 	* Makefile.am (install-exec-hook): Rename libgpgcedev-0.dll.
